# CRS

./: .gitignore  README.md  _dataclasses.py  dataLoader.py  data_modules.py  model.py  model_classifier.ckpt  model_system.py  pyproject.toml  seminarka.ipynb  seminarka.py  train_classification.py  train_embedding.py  utils.py
data/: categories_encoding.csv  category_encoding.json  encoding.json  test_dataset.csv  test_dataset.json
data/dataset/: script.sh
